# land

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/device/: CMakeLists.txt  plugin_device.cpp  plugin_device.hpp
src/device/cpu/: cpu_device_plugin.cpp  cpu_device_plugin.hpp
src/graph/: CMakeLists.txt  optimizer.cpp  optimizer.hpp  plugin_graph.cpp  tf_buffer.cpp  tf_buffer.hpp
src/kernels/: CMakeLists.txt  plugin_kernel.cpp
src/kernels/xpu/: add_kernel.cpp  relu_kernel.cpp  xpu_kernel_init.cpp  xpu_kernel_init.hpp
src/ops/: CMakeLists.txt  add_op.cpp  op_init.cpp  op_init.hpp  relu_op.cpp
src/profiler/: CMakeLists.txt  plugin_profiler.cpp
src/utils/: CMakeLists.txt  attr_value.proto  cost_graph.proto  device_properties.proto  function.proto  graph.proto  node_def.proto  op_def.proto  op_performance_data.proto  resource_handle.proto  tensor.proto  tensor_shape.proto  types.proto  versions.proto
