find_package(Protobuf REQUIRED)

file(GLOB NART_PROTOS *.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${NART_PROTOS})
add_library(
    ${LIB_NAME}_UTILS
    OBJECT
    ${PROTO_SRCS}
)

set_target_properties(${LIB_NAME}_UTILS
    PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    CXX_VISIBILITY_PRESET "hidden"
    VISIBILITY_INLINES_HIDDEN 1
)

set_property(GLOBAL APPEND PROPERTY ${LIB_NAME}_DEPS $<TARGET_OBJECTS:${LIB_NAME}_UTILS>)
